# fam-budget-tg-powered

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-cloud-run.yml  scheduled-digests.yml
app/: __init__.py  audio.py  config.py  currency.py  main.py  models.py  openai_client.py  processor.py  sheets.py  taxonomy.py  telegram.py
tests/: test_budget_command.py  test_main_handlers.py  test_openai_client.py  test_reports_limits.py  test_taxonomy.py  test_workflows.py
