[project]
name = "fam-budget-tg-powered"
version = "0.1.0"
description = "Telegram-powered family budget bot for Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "httpx==0.28.1",
    "openai==1.59.7",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "google-api-python-client==2.156.0",
    "google-auth==2.37.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
